# Nanimai-test-task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: __init__.py  setting.py
app/db/: __init__.py  session.py
app/grpc/: balance.proto  balance_pb2.py  balance_pb2_grpc.py  server.py
app/handlers/: __init__.py  balance.py
app/models/: __init__.py  transaction.py  user_balance.py
app/repositories/: __init__.py  balance_repository.py
app/schemas/: __init__.py  transactions.py  user_balance_schema.py
app/services/: balance_service.py
